* MediaWiki now also requires the php-intl extension.
* BotPassword::save() now returns a Status object for the result rather than
  a bool.
* The methods in CoreTagHooks have been marked @internal and type hints have
  been added.  The methods were unused outside of MediaWiki core.
* SquidPurgeClient and SquidPurgeClientPool, deprecated since 1.35, have been
  removed.
* ParserTestRunner no longer invokes the ParserTestTables hook, instead
  cloning all database tables before running tests as MediaWikiIntegrationTest
  does.  If an extension was misusing the hook to *exclude* tables from the
  clone, that will no longer occur and tests may fail.
* The UserWrapper class, which was only loaded for tests and had no uses found
  in public MediaWiki-related git, was removed.
* Passing Title as a second parameter to RevisionStore::getPreviousRevision and
  getNextRevision, hard deprecated since 1.31, was prohibited.
* The internal class FirejailCommand was removed.
* Command::execute() now returns a Shellbox\Command\UnboxedResult instead of a
  MediaWiki\Shell\Result. Any type hints should be updated.
* …

=== Deprecations in 1.36 ===
* (T245963) User::getGrantName() is now hard deprecated and will be removed in
  a subsequent release. Use MWGrants::grantName() instead.
* (T260933) UserIdentity::getId() is now deprecated. Use
  UserIdentity::getUserId() instead.
* wfIncrStats() is now deprecated. Use MediaWikiServices::getInstance()
  ->getStatsdDataFactory()->updateCount() instead.
* WikiPage::doEditContent() is now deprecated. Use
  WikiPage::doUserEditContent() instead. Note that doEditContent() was also
  deprecated in 1.32 for unrelated reasons and doUserEditContent() is
  deprecated for other reasons, however, using doUserEditContent() is
  recommended over using doEditContent().
* WikiPage::doUserEditContent() is now deprecated. Use
  PageUpdater::saveRevision instead. Note that the new method expects callers