@@ -6,6 +6,7 @@ use DBAccessObjectUtils;
 use InvalidArgumentException;
 use MediaWiki\Linker\LinkTarget;
 use MediaWiki\Page\Hook\WikiPageFactoryHook;
+use stdClass;
 use Title;
 use TitleFactory;
 use WikiCategoryPage;
@@ -45,18 +46,26 @@ class WikiPageFactory {
 	/**
 	 * Create a WikiPage object from a title.
 	 *
-	 * @param Title $title
+	 * @param PageIdentity $pageIdentity
 	 *
 	 * @return WikiPage
 	 */
-	public function newFromTitle( Title $title ) {
-		$ns = $title->getNamespace();
-
-		if ( $ns == NS_MEDIA ) {
-			throw new InvalidArgumentException( "NS_MEDIA is a virtual namespace; use NS_FILE." );
-		} elseif ( $ns < 0 ) {
-			throw new InvalidArgumentException( "Invalid or virtual namespace $ns given." );
+	public function newFromTitle( PageIdentity $pageIdentity ) {
+		if ( $pageIdentity instanceof WikiPage ) {
+			return $pageIdentity;
 		}
+
+		if ( !$pageIdentity->canExist() ) {
+			throw new InvalidArgumentException(
+				"The given PageIdentity does not represent a proper page"
+			);
+		}
+
+		$ns = $pageIdentity->getNamespace();
+
+		// TODO: remove the need for casting to Title. We'll have to create a new hook to
+		//       replace the WikiPageFactory hook.
+		$title = Title::castFromPageIdentity( $pageIdentity );
 
 		$page = null;
 		if ( !$this->wikiPageFactoryHookRunner->onWikiPageFactory( $title, $page ) ) {
@@ -91,7 +100,7 @@ class WikiPageFactory {
 	/**
 	 * Create a WikiPage object from a database row
 	 *
-	 * @param \stdClass $row Database row containing at least fields returned by getQueryInfo().
+	 * @param stdClass $row Database row containing at least fields returned by getQueryInfo().
 	 * @param string|int $from Source of $data:
 	 *        - "fromdb" or WikiPage::READ_NORMAL: from a replica DB
 	 *        - "fromdbmaster" or WikiPage::READ_LATEST: from the master DB
